--- a/app/chatbot-deployment.yaml
+++ b/app/chatbot-deployment.yaml
@@ -19,14 +19,40 @@ spec:
         image: genaistarterstackacr.azurecr.io/chatbot:latest
         ports:
         - containerPort: 80
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
         env:
-        - name: OPENAI_API_KEY
-          value: " " # Replace with your actual key
-        - name: OPENAI_ENDPOINT
-          value: " " # Replace with your actual endpoint
         - name: QDRANT_HOST
           value: "qdrant"
         - name: QDRANT_PORT
           value: "6333" # Ensure this is a string "6333" for the environment variable
+        volumeMounts:
+        - name: secrets-store-inline
+          mountPath: "/mnt/secrets-store"
+          readOnly: true
+      volumes:
+      - name: secrets-store-inline
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: "azure-keyvault-secrets"
       imagePullSecrets:
       - name: acr-secret
